Agregado contenido al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Titulo interesante post</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
+                <p>Nuevo parrafo con otra info que haga bulto para prueba</p>
             </div>
         </div>
     </body>
