--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id="cabecera">
                 HyperBlog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Titulo interesante post</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
                 <p>Nuevo parrafo con otra info que haga bulto para prueba</p>
+                <p>Hols</p>
             </div>
         </div>
     </body>
