Cabecera footer terminado

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Bienvenido a HyperBlog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
@@ -14,6 +15,9 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
                 <p>Nuevo parrafo con otra info que haga bulto para prueba</p>
                 <p>Hols</p>
+            </div>
+            <div id="footer">
+                Hecho en platzi 
             </div>
         </div>
     </body>
