Tildes y typos agregados

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,9 +12,9 @@
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Titulo interesante post</h1>
+                <h1>Título interesante post</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing</p>
-                <p>Nuevo parrafo con otra info que haga bulto para prueba</p>
+                <p>Nuevo párrafo con otra info que haga bulto para prueba</p>
                 <p>Hols</p>
             </div>
             <div id="footer">
